# warble

./: README.md  demo.py  pyproject.toml
baudcast/: audio_io.py  cli.py  demodulator.py  framing.py  modulator.py
docs/: debugging.md  glossary.md  how-it-works.md  quick-start.md  repo-map.md
tests/: test_demodulator.py  test_framing.py
warble/: __init__.py  __main__.py  cli.py  config.py  framing.py  utils.py
