[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warble"
version = "0.1.0"
description = "Transfer files between computers using sound waves."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Brian R. Bondy" }
]
keywords = ["audio", "fsk", "modem", "transfer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
audio = ["sounddevice>=0.4.6"]
dev = ["pytest>=8.0"]

[project.scripts]
warble = "warble.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["warble", "warble.*"]
